Restructured the project